elastic-stack/templates/fleet-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleet-server
  labels:
    app: fleet-server
spec:
  type: ClusterIP
  ports:
    - port: 8220
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: fleet-server
